# pdf-extract

./: pyproject.toml
src/: main.py
src/agent/: json_parser.py  pdf-parser.py  pdf_parser.py  pdf_parser_agent.py
src/llm_model/: bedrock.py
src/schema/: invoice_schema.py  oi_invoice_schema.py  validation_schema.py
